--- a/app/styles/sass/main.sass
+++ b/app/styles/sass/main.sass
@@ -3,3 +3,101 @@
 
 @import config
 @import 'blocks/**/*'
+
+
+.main
+    display: flex
+    justify-content: center
+    background-color: #EBF4FF
+    width: 100%
+    height: 585px
+    padding-top: 19px
+    &_wrap
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+        width: 1440px
+        height: 80%
+    &_nav
+        height: 106px
+        width: 100%
+        display: flex
+        justify-content: center
+        &_wrap
+            width: 90%
+            height: 55px
+            display: flex
+            justify-content: space-between
+        &_logo
+            width: 160px
+            height: 55px
+        
+          
+    &_content
+        width: 100%
+        display: flex
+        justify-content: center
+        &_wrap
+            display: flex
+            flex-direction: column
+            width: 68%
+            height: 250px
+            justify-content: space-between
+        &_title
+            display: flex
+            flex-direction: column
+            justify-content: center
+            height: 133px
+            width: 565px
+        &_text
+            width: 575px
+            height: 114px
+            font-size: 25px
+            line-height: 1
+
+.content
+    width: 100%
+    display: flex
+    justify-content: center
+    &_wrap
+        display: flex
+        flex-direction: column
+        align-items: center
+       
+        width: 1440px
+    &_section
+        width: 68%
+        height: 460px
+        display: flex
+        justify-content: space-between
+    &_text
+        width: 50%
+    &_image
+        height: 450px
+        width: 50%
+        overflow: hodden
+       
+
+.contact
+    border: none
+    border-radius: 50px
+    width: 164px
+    height: 44px
+    &-nav
+        background: #2979EC
+        color: #fff
+
+.title
+    font-size: 50px
+    height: 60px
+    line-height: 1
+  
+    
+    &-bold
+        height: 60px
+        font-weight: bold
+        
+
+img
+    max-width:100%
+    height:auto
