--- a/app/styles/sass/main.sass
+++ b/app/styles/sass/main.sass
@@ -59,6 +59,7 @@
     width: 100%
     display: flex
     justify-content: center
+    padding-top: 114px
     &_wrap
         display: flex
         flex-direction: column
@@ -67,9 +68,10 @@
         width: 1440px
     &_section
         width: 68%
-        height: 460px
+        height: 500px
         display: flex
         justify-content: space-between
+        margin-bottom: 40px
     &_text
         width: 50%
     &_image
@@ -77,6 +79,26 @@
         width: 50%
         overflow: hodden
        
+.footer
+    width: 100%
+    height: 400px
+    display: flex
+    justify-content: center
+    align-items: center
+    background-color: #0A459E
+    &_wrap
+        display: flex
+        flex-direction: column
+        align-items: center
+        justify-content: space-between
+        width: 68%
+
+    &_text
+        letter-spacing: 0px
+        color: #fff
+    
+            
+
 
 .contact
     border: none
@@ -86,6 +108,11 @@
     &-nav
         background: #2979EC
         color: #fff
+    &-footer
+        background: #FFBE3C
+        color: #0A459E
+        
+
 
 .title
     font-size: 50px
