--- a/app/styles/sass/main.sass
+++ b/app/styles/sass/main.sass
@@ -114,6 +114,7 @@
         letter-spacing: 0px
         color: #fff
         font-size: 40px
+        margin-bottom: 65px
     
             
 
@@ -195,4 +196,8 @@ img
             margin-bottom: 20px
 
 
-    
+    .footer
+        &_text
+            text-align: center
+            line-height: 1.2
+            margin-bottom: 20px
