--- a/app/styles/sass/_config.sass
+++ b/app/styles/sass/_config.sass
@@ -27,10 +27,10 @@ $gutter: $grid-gutter-width
 		font-weight: $fweight
 		src: url($furl) format('woff2')
 
-@include font('roboto-oh5', normal, 400, '../fonts/OpenSans-Regular.ttf')
-@include font('roboto-oh5', italic, 400, '../fonts/roboto-italic-webfont.woff2')
-@include font('roboto-oh5', normal, 700, '../fonts/OpenSans-Bold.ttf')
-@include font('roboto-oh5', italic, 700, '../fonts/roboto-bolditalic-webfont.woff2')
+@include font('OpenSans', normal, 400, '../fonts/OpenSans-Regular.ttf')
+@include font('OpenSans', italic, 400, '../fonts/roboto-italic-webfont.woff2')
+@include font('OpenSans', normal, 700, '../fonts/OpenSans-Bold.ttf')
+@include font('OpenSans', italic, 700, '../fonts/roboto-bolditalic-webfont.woff2')
 
 // GENERAL CSS SETTINGS
 
