--- a/app/styles/sass/_config.sass
+++ b/app/styles/sass/_config.sass
@@ -3,8 +3,8 @@
 $accent: orange // Accent Color
 $fontsize: 16px // Body Font Size
 $textcolor: #333 // Text Color
-$lineheight: 1.65 // Document Line Height
-$userfont: roboto-oh5, sans-serif // User Font Family
+$lineheight: 1.5 // Document Line Height
+$userfont: OpenSans, sans-serif // User Font Family
 $systemfont: -apple-system, BlinkMacSystemFont, Arial, sans-serif // System Font Family
 
 // Bootstrap compatible gutter variable => $gutter
@@ -13,8 +13,7 @@ $gutter: $grid-gutter-width
 
 // IMPORT SECTION
 
-@import 'node_modules/bootstrap/scss/bootstrap-reboot.scss' // Bootstrap Reboot collection
-@import 'node_modules/bootstrap/scss/mixins/_breakpoints.scss' // Bootstrap Breakpoints mixin
+
 // @import 'node_modules/bootstrap/scss/bootstrap-grid.scss' // Optional Bootstrap Grid
 // @import 'node_modules/bootstrap/scss/_utilities.scss' // Optional Bootstrap Utilites
 
@@ -25,12 +24,12 @@ $gutter: $grid-gutter-width
 		font-family: $fname
 		font-style: $fstyle
 		font-weight: $fweight
-		src: url($furl) format('woff2')
+		src: url($furl) format('ttf')
 
 @include font('OpenSans', normal, 400, '../fonts/OpenSans-Regular.ttf')
-@include font('OpenSans', italic, 400, '../fonts/roboto-italic-webfont.woff2')
+
 @include font('OpenSans', normal, 700, '../fonts/OpenSans-Bold.ttf')
-@include font('OpenSans', italic, 700, '../fonts/roboto-bolditalic-webfont.woff2')
+
 
 // GENERAL CSS SETTINGS
 
@@ -49,7 +48,7 @@ input, textarea
 		border-color: green
 
 body
-	font-family: $userfont
+	font-family: OpenSans
 	font-size: $fontsize
 	line-height: $lineheight
 	color: $textcolor
