--- a/app/styles/sass/main.sass
+++ b/app/styles/sass/main.sass
@@ -124,9 +124,16 @@
     border-radius: 50px
     width: 164px
     height: 44px
+    text-transform: uppercase
+    cursor: pointer
+    &:hover
+        opacity: 80%
+
+    
     &-nav
         background: #2979EC
         color: #fff
+        font-weight: bold
     &-footer
         background: #FFBE3C
         color: #0A459E
